--- a/src/App.css
+++ b/src/App.css
@@ -80,11 +80,12 @@
 }
 .administrator {
   font-size: small;
-  margin-bottom: 20px;
+  margin-bottom: inherit;
 }
 .sidedashimg {
   width: 20px;
   height: 20px;
+  margin-left: 9px;
 }
 .sidearrowimg {
   height: 10px;
@@ -100,14 +101,27 @@
 
 .sidebar {
   /* margin-left: 50px; */
-  min-width: 200px;
+  /* min-width: 200px;
   position: relative;
-  bottom: 50px;
+  bottom: 50px; */
+  padding-left: 50px;
+    border-radius: 10px;
+}
+.sidebar-inner{
+  border-radius: 10px;
+    background: white;
+    /* border: none; */
+    border: 1px solid #efefef;
 }
 
-.sideview {
-  height: 110vh;
+.menu-label{
+  font-size: 13px;
 }
+
+
+/* .sideview {
+  height: 110vh;
+} */
 .select {
   width: 100px;
   height: 30px;
@@ -134,8 +148,8 @@
     no-repeat left;
   background-size: 20px;
   background-position-x: 3px;
-  margin-left: 20px;
-  width: 75%;
+  /* margin-left: 20px;
+  width: 75%; */
 }
 
 .topcontimage {
